# wfcrc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAIMS_TRACEABILITY.md  CONTRIBUTING.md  LICENSE  MS6_ARCHITECTURE_SPEC.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: DATASET_INTEGRATION_GUIDE.md  DATASET_SPLIT_POLICY.md  EXPERIMENT_EXECUTION_CHECKLIST.md  EXPERIMENT_PROTOCOL.md  MODEL_POLICY.md  PILOT_REPORT.md  PRODUCTION_READINESS_AUDIT.md  RESULTS_SCHEMA.md  architecture.md  baseline_catalog.md  configuration.md  getting-started.md  index.md  reproducibility.md
docs/api/: config.md  exceptions.md  utils_cache.md  utils_io.md  utils_logging.md  utils_numerics.md  utils_reproducibility.md  utils_seeds.md
requirements/: base.txt  dev.txt  docs.txt  lock.txt
scripts/: pilot_ms10.py  reproduce.py
tests/: conftest.py
tests/fixtures/: reproduce_golden.json
tests/unit/ambiguity/: test_base.py  test_cvar.py  test_finite_group.py  test_kl.py  test_known_weight.py  test_registry.py
tests/unit/baselines/: _helpers.py  test_base.py  test_ensembles.py  test_group_conditional.py  test_lac.py  test_negative_controls.py  test_robust_fdiv.py  test_scaling.py  test_vanilla_crc.py  test_wfcrc_adapter.py
tests/unit/calibration/: _helpers.py  test_calibrator.py  test_loss_table.py  test_negative_controls.py  test_pipeline.py  test_splitter.py  test_threshold_search.py
tests/unit/config/: test_loader.py  test_schema.py
tests/unit/datasets/: _helpers.py  test_base.py  test_corruptions.py  test_loss_table_builder.py  test_metadata.py  test_preprocessing.py  test_registry.py  test_score_provider.py
tests/unit/datasets/loaders/: test_acdc.py  test_acdc_real_data.py  test_cifar.py  test_cifar_real_data.py  test_image_io.py  test_kvasir.py  test_kvasir_real_data.py  test_msd.py  test_msd_pancreas_real_data.py  test_msd_real_data.py  test_split_support.py
tests/unit/evaluation/: _helpers.py  test_experiment.py  test_metrics.py  test_verifier.py
tests/unit/losses/: _helpers.py  test_base.py  test_fnr.py  test_fpr.py  test_miscoverage.py  test_registry.py
tests/unit/models/: test_registry.py
tests/unit/models/scores/: test_hippocampus_pipeline_real_data.py  test_hippocampus_segmenter.py
tests/unit/prediction_sets/: test_base.py  test_classification.py  test_registry.py  test_segmentation.py
tests/unit/runner/: _helpers.py  test_checkpointer.py  test_runner.py
tests/unit/scripts/: test_pilot_ms10.py  test_reproduce.py
tests/unit/utils/: test_cache.py  test_io.py  test_logging.py  test_numerics.py  test_reproducibility.py  test_seeds.py
tests/unit/visualization/: test_base.py  test_plots.py
wfcrc/: __init__.py  _version.py  constants.py  exceptions.py
wfcrc/ambiguity/: __init__.py  base.py  cvar.py  finite_group.py  kl.py  known_weight.py
wfcrc/baselines/: __init__.py  base.py  ensembles.py  group_conditional.py  lac.py  negative_controls.py  robust_fdiv.py  scaling.py  vanilla_crc.py  wfcrc_adapter.py
wfcrc/calibration/: __init__.py  calibrator.py  loss_table.py  pipeline.py  splitter.py  threshold_search.py
wfcrc/config/: __init__.py  loader.py  schema.py
wfcrc/datasets/: __init__.py  base.py  corruptions.py  loss_table_builder.py  metadata.py  preprocessing.py  registry.py  score_provider.py
wfcrc/datasets/loaders/: __init__.py  _image_io.py  _split_support.py  acdc.py  cifar.py  kvasir.py  msd.py
wfcrc/evaluation/: __init__.py  experiment.py  metrics.py  verifier.py
wfcrc/losses/: __init__.py  base.py  fnr.py  fpr.py  miscoverage.py
wfcrc/models/: __init__.py  checkpoint.py  registry.py
wfcrc/models/scores/: __init__.py  hippocampus_segmenter.py
wfcrc/prediction_sets/: __init__.py  base.py  classification.py  segmentation.py
wfcrc/runner/: __init__.py  checkpointer.py  runner.py
wfcrc/utils/: __init__.py  cache.py  io.py  logging.py  numerics.py  reproducibility.py  seeds.py
wfcrc/visualization/: __init__.py  base.py  plots.py
