[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "wfcrc"
version = "0.5.0"
description = "WF-CRC: Worst-case Family Conformal Risk Control — reproducible research repository"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "WF-CRC Research Team" }]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "pyyaml>=6.0,<7",
  "matplotlib>=3.8,<4",
  # MS6.2 (frozen Q2): reference implementation for the Cityscapes-C
  # corruption protocol. No numpy/stdlib alternative provides the
  # Hendrycks-Dietterich corruption suite this project's frozen Experiment
  # Blueprint / Dataset Selection Audit require; see
  # wfcrc/datasets/corruptions.py's module docstring for the verified,
  # partial (12/15) compatibility of this pinned version against a modern
  # numpy/scikit-image stack.
  "imagecorruptions>=1.1.2,<2",
  # MS6.2 Resolution Pass (Task 1/3): wfcrc.datasets.corruptions imports
  # skimage.util.random_noise directly for the impulse_noise compatibility
  # path (imagecorruptions==1.1.2's own call is not seed-controllable on
  # modern scikit-image); pinned to the range actually validated for
  # bit-identical/equivalence behavior (see corruptions.py's docstring).
  "scikit-image>=0.24,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.12",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Repository = "https://github.com/PManiAwasthi/wfcrc"

[tool.hatch.build.targets.wheel]
packages = ["wfcrc"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["wfcrc", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["wfcrc"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imagecorruptions.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=wfcrc --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["wfcrc"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
