[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "wfcrc"
version = "0.5.0"
description = "WF-CRC: Worst-case Family Conformal Risk Control — reproducible research repository"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "WF-CRC Research Team" }]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "pyyaml>=6.0,<7",
  "matplotlib>=3.8,<4",
  # MS6.2 (frozen Q2): reference implementation for the Cityscapes-C
  # corruption protocol. No numpy/stdlib alternative provides the
  # Hendrycks-Dietterich corruption suite this project's frozen Experiment
  # Blueprint / Dataset Selection Audit require; see
  # wfcrc/datasets/corruptions.py's module docstring for the verified,
  # partial (12/15) compatibility of this pinned version against a modern
  # numpy/scikit-image stack.
  "imagecorruptions>=1.1.2,<2",
  # MS6.2 Resolution Pass (Task 1/3): wfcrc.datasets.corruptions imports
  # skimage.util.random_noise directly for the impulse_noise compatibility
  # path (imagecorruptions==1.1.2's own call is not seed-controllable on
  # modern scikit-image); pinned to the range actually validated for
  # bit-identical/equivalence behavior (see corruptions.py's docstring).
  "scikit-image>=0.24,<1",
  # MS6.3A: NIfTI I/O for wfcrc.datasets.loaders.msd (MSDNiftiLoader). The
  # smallest adequate reader for this job — pure Python + numpy, no compiled
  # medical-imaging framework (SimpleITK/ITK was evaluated and rejected as
  # unnecessarily heavy for "read a .nii.gz array + header spacing"); see
  # wfcrc/datasets/loaders/msd.py's module docstring for the full Task 1
  # dependency-evaluation record.
  "nibabel>=5.2,<6",
  # MS7 (frozen Q1, MS6_ARCHITECTURE_SPEC.md §8.1): the deep-learning
  # runtime for wfcrc/models/ Score Providers/checkpoints ONLY — must never
  # be imported by wfcrc.calibration/.ambiguity/.losses/.prediction_sets/
  # .evaluation/.runner, which remain NumPy-only. Install the CPU-only
  # build (`pip install torch --index-url https://download.pytorch.org/whl/cpu`)
  # — plain PyPI `torch` can otherwise resolve a CUDA-bundled build; this
  # project has no GPU dependency anywhere and CPU-only keeps the install
  # small and reproducible. See requirements/base.txt for the exact command.
  "torch>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.12",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Repository = "https://github.com/PManiAwasthi/wfcrc"

[tool.hatch.build.targets.wheel]
packages = ["wfcrc"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["wfcrc", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["wfcrc"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imagecorruptions.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skimage.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=wfcrc --cov-report=term-missing -m 'not real_data'"
testpaths = ["tests"]
markers = [
  # MS6 Q3 (frozen, MS6_ARCHITECTURE_SPEC.md §8.3): real-data integration
  # tests require a real downloaded dataset/checkpoint, network access, or
  # GPU, and are excluded from the default suite/CI by the `-m 'not
  # real_data'` addopts above. Run explicitly with `pytest -m real_data`.
  "real_data: opt-in integration test requiring real downloaded data (excluded by default)",
]

[tool.coverage.run]
branch = true
source = ["wfcrc"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
